kustomize/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  rules:
    - host: minikube.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: docs
                port:
                  name: http
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: webapi
                port:
                  name: http
